# learn_cmake_ruby

./: .gitignore  .gitmodules  Gemfile  README.md  Rakefile  learn_cmake_ruby.gemspec
ext/learn_cmake_ruby/: CMakeLists.txt  Rakefile  learn_cmake_ruby.c
lib/: learn_cmake_ruby.rb
lib/learn_cmake_ruby/: version.rb  windows.rb
